spacing fixes

--- a/app/assets/stylesheets/questions-page.scss
+++ b/app/assets/stylesheets/questions-page.scss
@@ -100,7 +100,7 @@
     margin: 0 auto;
     width: 60%;
     margin-left: 220px;
-    margin-right:-3em;
+    margin-right:-1em;
 
   }
 
